# Ragops-Control-Plane

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
data/manifests/: source_manifest.json
scripts/: build_index.py  ingest.py
src/ragops/: __init__.py  app.py  schemas.py
src/ragops/indexing/: __init__.py  qdrant.py
src/ragops/ingestion/: chunking.py  cleaning.py  embeddings.py  loaders.py
src/ragops/retrieval/: dense.py
src/ragops_control_plane/: app.py
tests/: test_api.py  test_app.py  test_chunking.py  test_indexing.py  test_ingestion.py  test_retrieval.py
